# whenwasi

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/whenwasi/: __main__.py  data.py
tests/: __init__.py  test_main.py
