[tool.poetry]
name = "whenwasi"
version = "0.0.1-alpha.0"
description = "Whenwasi"
authors = ["Andrew Schweitzer <schweitz72@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anschweitzer/whenwasi"
repository = "https://github.com/anschweitzer/whenwasi"
documentation = "https://whenwasi.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/anschweitzer/whenwasi/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
httpx = {extras = ["cli"], version = "^0.23.0"}
pandas = "^1.4.3"
aiofile = "^3.7.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
whenwasi = "whenwasi.__main__:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["whenwasi", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
